✨ feat(client): budget CR(UD)
Author: Youhao Zhong <jp2022213676@qmul.ac.uk>